--- a/css/main.css
+++ b/css/main.css
@@ -123,12 +123,10 @@ h3 {
 .button {
   font-family: inherit;
   cursor: pointer;
-  transition: box-shadow var(--primary-transition);
   font-size: 16px;
   font-weight: 700;
   line-height: 1.87;
   letter-spacing: 0.06em;
-  border-color: transparent;
   border-radius: 4px;
 }
 
@@ -847,35 +845,52 @@ h3 {
 }
 
 .portfolio {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .categories {
   display: flex;
-  margin-bottom: 50px;
-  justify-content: center;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
+}
+
+@media screen and (min-width: 768px) {
+  .categories {
+    margin-bottom: 30px;
+    flex-wrap: nowrap;
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .categories {
+    margin-bottom: 50px;
+  }
 }
 
 .categories__item {
   margin-left: 8px;
-  background-color: var(--button-background-color);
-  border-radius: 4px;
+  margin-bottom: 15px;
 }
 
 .categories__button {
+  height: 38px;
+  padding: 6px 22px;
+  font-weight: 500;
+  line-height: 1.6;
+  text-decoration: none;
+  border: 1px transparent;
+  border-radius: 4px;
   color: var(--title-text-color);
   background-color: var(--button-background-color);
-  font-family: inherit;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.6;
-  letter-spacing: 0.03em;
-  text-decoration: none;
-  cursor: pointer;
-  border: 1px;
-  border-radius: 4px;
-  padding: 6px 22px;
   transition: color var(--primary-transition), background-color var(--primary-transition);
 }
 
@@ -886,13 +901,18 @@ h3 {
 }
 
 .work-list {
-  display: flex;
-  flex-wrap: wrap;
+  display: block;
+}
+
+@media screen and (min-width: 768px) {
+  .work-list {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 .work-list__item {
-  width: 370px;
-  margin-right: 30px;
+  width: 100%;
   margin-bottom: 30px;
   background: #ffffff;
   border: 1px solid #eeeeee;
@@ -903,21 +923,25 @@ h3 {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.work-list__item:nth-child(3n) {
-  margin-right: 0px;
+@media screen and (min-width: 768px) {
+  .work-list__item {
+    width: 45%;
+    margin: 0px 15px 30px;
+  }
 }
 
-.work-list__item:nth-last-child(-n + 3) {
-  margin-bottom: 0px;
+@media screen and (min-width: 1200px) {
+  .work-list__item {
+    width: 370px;
+    margin: 0px 30px 30px 0px;
+  }
+  .work-list__item:nth-child(3n + 3) {
+    margin-right: 0px;
+  }
 }
 
 .work-list__link {
   text-decoration: none;
-}
-
-.work-list__img {
-  display: block;
-  width: 100%;
 }
 
 .overlay-wrapper {
