--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,31 +1,43 @@
 .portfolio {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  // padding-top: 94px;
+  // padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 .categories {
   display: flex;
-  margin-bottom: 50px;
-  justify-content: center;
+  // margin-bottom: 50px;
+  // justify-content: center;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
+  @media screen and (min-width: 768px) {
+    margin-bottom: 30px;
+    flex-wrap: nowrap;
+    justify-content: center;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+  }
 }
 
 .categories__item {
   margin-left: 8px;
-  background-color: var(--button-background-color);
-  border-radius: 4px;
+  margin-bottom: 15px;
 }
 .categories__button {
+  height: 38px;
+  padding: 6px 22px;
+  font-weight: 500;
+  line-height: 1.6;
+  text-decoration: none;
+  border: 1px transparent;
+  border-radius: 4px;
   color: var(--title-text-color);
   background-color: var(--button-background-color);
-  font-family: inherit;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.6;
-  letter-spacing: 0.03em;
-  text-decoration: none;
-  cursor: pointer;
-  border: 1px;
-  border-radius: 4px;
-  padding: 6px 22px;
   transition: color var(--primary-transition),
     background-color var(--primary-transition);
   &:hover,
@@ -38,13 +50,20 @@
 }
 
 .work-list {
-  display: flex;
-  flex-wrap: wrap;
+  // display: flex;
+  // flex-wrap: wrap;
+  display: block;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  @media screen and (min-width: 1200px) {
+  }
 }
 
 .work-list__item {
-  width: 370px;
-  margin-right: 30px;
+  width: 100%;
+  // margin-right: 30px;
   margin-bottom: 30px;
   background: #ffffff;
   border: 1px solid #eeeeee;
@@ -54,11 +73,22 @@
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
   }
-  &:nth-child(3n) {
-    margin-right: 0px;
+  // &:nth-child(3n) {
+  //   margin-right: 0px;
+  // }
+  // &:nth-last-child(-n + 3) {
+  //   margin-bottom: 0px;
+  // }
+  @media screen and (min-width: 768px) {
+    width: 45%;
+    margin: 0px 15px 30px;
   }
-  &:nth-last-child(-n + 3) {
-    margin-bottom: 0px;
+  @media screen and (min-width: 1200px) {
+    width: 370px;
+    margin: 0px 30px 30px 0px;
+    &:nth-child(3n + 3) {
+      margin-right: 0px;
+    }
   }
 }
 
@@ -66,10 +96,6 @@
   text-decoration: none;
 }
 
-.work-list__img {
-  display: block;
-  width: 100%;
-}
 .overlay-wrapper {
   position: relative;
   overflow: hidden;
